# tinboker

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
mcp-servers/article-authoring/: README.md  pyproject.toml  server.py
mcp-servers/stock-translations/: BACKFILL_AGENT.md  README.md  pyproject.toml  server.py
pipelines/: .gitignore  pyproject.toml
pipelines/docs/: data-consolidation-plan.md  llm-summarization-experiment-zh-tw.md  llm-summarization-experiment.md  wiki-news-ingest.md
pipelines/libs/shared/scripts/: backfill_tw_tickers.py  build_sectors_seed_from_tide.py  compile_sector_and_theme_universe.py  enrich_sectors_with_tavily.py  generate_sector_reasons.py  generate_sector_visuals.py  refresh_industry_members.py
pipelines/libs/shared/src/shared/: platform_client.py  secrets.py  sectors.py  sectors_seed_backup.py  tag_vocabulary_seed_backup.py  tickers.py  tickers_seed_backup.py
pipelines/libs/shared/tests/: test_refresh_industry_members.py  test_sector_exposures.py  test_ticker_validation.py  test_tickers.py  test_wiki_ingest_shapes.py
pipelines/services/news/deploy/: tinboker-news.service
pipelines/services/podcast/: .env.example  README.md  app.py  podcasts_tw.json  pyproject.toml  regen_mcp.py  rss_feeds.json
pipelines/services/podcast/configs/: default.yaml
pipelines/services/podcast/deploy/: tinboker-trending-tickers.service  tinboker-trending-tickers.timer
pipelines/services/podcast/scripts/: README.md  _audit_episodes.py  _reprocess_batch.py  aggregate_unresolved_market_trends.py  backfill_insight_dates.py  backfill_key_insights.py  backfill_regen_from_gcs.py  backfill_sector_exposures.py  backfill_skipped_segments.py  backfill_ticker_insights.py  backfill_ticker_insights_from_postgres.py  cleanup_offvocab_tags.py  deploy_vps.sh  migrate_tag_slugs.py  migrate_theme_and_sector_metadata.py  purge_orphan_insights.py  purge_templated_insights.py  refresh_trending_tickers.py  regenerate_ticker_insights_only.py  run_hourly_trending.sh  translate_english_insights.py
pipelines/services/podcast/src/: secrets_bootstrap.py  watcher.py
pipelines/services/podcast/src/models/: podcast_models.py
pipelines/services/podcast/src/pipeline/: processor.py  utils.py
pipelines/services/podcast/src/podcast/: cli.py  orchestrator.py
pipelines/services/podcast/src/routers/: podcast.py
pipelines/services/podcast/src/service/: feed_source.py  gcs_storage_service.py  rss_feed.py  speech_to_text.py  upload_to_firebase.py
pipelines/services/podcast/tests/: test_regen_orchestrator.py
(+570 files in other folders)
