[project]
name = "tinboker-article-authoring-mcp"
version = "0.1.0"
description = "MCP server for drafting and publishing TinBoker articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.25.0",
]

[project.scripts]
tinboker-article-authoring-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
