[project]
name = "tinboker-stock-translations-mcp"
version = "0.1.0"
description = "MCP server for looking up TinBoker stock translations (en / zh-TW names + brand color)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.25.0",
]

[project.scripts]
tinboker-stock-translations-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
